--- a/src/main/resources/templates/tipoRecomendacion/tipoRecomendacion.html
+++ b/src/main/resources/templates/tipoRecomendacion/tipoRecomendacion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,41 +13,56 @@
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/dive.css">
 </head>
+
 <body>
 
-	<div th:fragment="sidebar" id="panel" class="activepanel ">
-		<div id="cpanel1head" style="margin: 0px; height: 10vh;" class="row">
-			<h2 id="titulopanel" class="col-lg-10">Web example</h2>
-			<i id="iconpanel" class="fa fa-bars col-lg-2"></i>
-		</div>
-		<div id="cpanelbody" class="row">
+	<div th:replace="fragments/sidebar :: sidebar" id="panel"
+		class="activepanel"></div>
 
-			<div class="panelitem">
-				<a th:href="@{/home}"> <i class="fa fa-home"
-					style="color: #7764E4;"></i>
-				</a>
-				<p>Inicio</p>
+	<div class="bg row">
+		<div th:replace="fragments/nav :: nav" class="row topbar col-lg-12"></div>
+
+		<div class="content container row col-12">
+			<div class="col-1">
+				<h3></h3>
+			</div>
+			<div class="col-3">
+				<h3>Registrar Tippo de Recomendación</h3>
+			</div>
+			<div class="col-8 frm-registro">
+				<form th:action="@{/tipoderecomendaciones/save}" method="post"
+					th:object="${tipoRecomendacion}">
+					<div class="form-group">
+						<label>ID:</label> <input type="text" class="form-control"
+							readonly th:field="idTipoRecomendacion"></input>
+
+						<div class="form-group">
+							<label for="tipo">TIPO:</label> <input type="text" required
+								th:field="*{tRecomendacion}" class="form-control" id="tipo"></input>
+							<div class="alert alert-danger"
+								th:if="${#fields.hasErrors('tRecomendacion')}"
+								th:errors="*{tRecomendacion}"></div>
+
+						</div>
+
+					</div>
+					<button type="submit" class="btn btn-warning">Aceptar</button>
+					<a href="/tipoderecomendaciones/list" class="btn btn-light">Cancelar</a>
+
+				</form>
+				<div th:if="${mensaje}" class="alert alert-danger">
+					<p th:text="${mensaje}"></p>
+				</div>
 			</div>
 
-			<div class="panelitem">
-				<a th:href="@{/categories/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Tipo de Recomendacion</p>
-			</div>
-			<div class="panelitem">
-				<a th:href="@{/suppliers/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Proveedores</p>
-			</div>
-			<div class="panelitem">
-				<a th:href="@{/products/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Productos</p>
-			</div>
 		</div>
 	</div>
+
+
+	<script src="/js/popper.min.js"></script>
+	<script src="/js/jquery-3.3.1.slim.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/dive.js"></script>
 </body>
+
 </html>
