--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -23,29 +23,30 @@
 
 			<div class="panelitem">
 				<a th:href="@{/home}"> <i class="fa fa-home"
-					style="color: #7764E4;"></i>
+					style="color: #000000;"></i>
 				</a>
 				<p>Inicio</p>
 			</div>
 
 			<div class="panelitem">
-				<a th:href="@{/categories/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
+				<a th:href="@{/tipoderecomendaciones/list}"> <i class="fa fa-star"
+					style="color: #D6D010;"></i>
 				</a>
 				<p>Tipo de Recomendacion</p>
 			</div>
 			
 			<div class="panelitem">
-				<a th:href="@{/distritos/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
+				<a th:href="@{/distritos/list}"> <i class="fa fa-globe"
+					style="color: #1A34C5;"></i>
 				</a>
 				<p>Distritos</p>
 			</div>
+			
 			<div class="panelitem">
-				<a th:href="@{/store/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
+				<a th:href="@{/store/list}"> <i class="fa fa-shopping-bag"
+					style="color: #41C51A;"></i>
 				</a>
-				<p>Tiendas</p>
+				<p>Tiendasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
 			</div>
 		</div>
 	</div>
