--- a/src/main/resources/templates/tienda/tienda.html
+++ b/src/main/resources/templates/tienda/tienda.html
@@ -58,8 +58,9 @@
 							th:errors="*{direccionTienda}"></div>
 
 						<div class="form-group">
-							<label for="telefono">TELEFONO:</label> <input type="text" required
-								th:field="*{telefonoTienda}" class="form-control" id="telefono"></input>
+							<label for="telefono">TELEFONO:</label> <input type="text"
+								required th:field="*{telefonoTienda}" class="form-control"
+								id="telefono"></input>
 						</div>
 						<div class="alert alert-danger"
 							th:if="${#fields.hasErrors('telefonoTienda')}"
@@ -91,6 +92,17 @@
 							</select>
 						</div>
 
+						
+
+						<div class="form-group">
+							<label for="fechaTienda">FECHA REGISTRO:</label> <input
+								type="date"  required th:field="*{fechaRegistro}"
+								id="start" name="trip-start" 
+								value="*{fechaRegistro}" min="2018-01-01" max="2058-12-31">
+						</div>
+						<div class="alert alert-danger"
+							th:if="${#fields.hasErrors('fechaRegistro')}"
+							th:errors="*{fechaRegistro}"></div>
 
 						<div class="form-group">
 							<label for="file" class="">FOTO:</label>
