--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -34,7 +34,7 @@
 				</a>
 				<p>Tipo de Recomendacion</p>
 			</div>
-			
+
 			<div class="panelitem">
 				<a th:href="@{/distritos/list}"> <i class="fa fa-th-large"
 					style="color: #5450D6;"></i>
@@ -46,6 +46,13 @@
 					style="color: #5450D6;"></i>
 				</a>
 				<p>Tiendas</p>
+			</div>
+			
+			<div class="panelitem">
+				<a th:href="@{/marca/list}"> <i class="fa fa-th-large"
+					style="color: #5450D6;"></i>
+				</a>
+				<p>Marcas</p>
 			</div>
 		</div>
 	</div>
