--- a/src/main/resources/templates/tipoUsuario/listTipoUsuario.html
+++ b/src/main/resources/templates/tipoUsuario/listTipoUsuario.html
@@ -26,7 +26,7 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Tipo Usuario</h3>
-				<a th:href="@{tipousuarios/new}" class="btn btn-warning">Nuevo</a>
+				<a th:href="@{/tipousuarios/new}" class="btn btn-warning">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
