--- a/src/main/resources/templates/Tipoua/listTipouas.html
+++ b/src/main/resources/templates/Tipoua/listTipouas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,64 +13,47 @@
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/dive.css">
 </head>
+
 <body>
 
-	<div th:fragment="sidebar" id="panel" class="activepanel ">
-		<div id="cpanel1head" style="margin: 0px; height: 10vh;" class="row">
-			<h2 id="titulopanel" class="col-lg-10">Menú</h2>
-			<i id="iconpanel" class="fa fa-bars col-lg-2"></i>
+	<div th:replace="fragments/sidebar :: sidebar" id="panel"
+		class="activepanel"></div>
+
+	<div class="bg row">
+		<div th:replace="fragments/nav :: nav" class="row topbar col-lg-12"></div>
+
+		<div class="content container">
+
+			<div class="d-flex">
+				<h3 class="title-content">Lista de Tipo UAs</h3>
+				<a th:href="@{/tipouas/new}" class="btn btn-warning">Nuevo</a>
+			</div>
+			<table class="table">
+				<thead class="thead-light">
+					<tr>
+						<th scope="col" class="text-center">Código</th>
+						<th scope="col" class="text-center">Nombre</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="cat : ${listaTipouas}">
+						<td class="text-center" th:text="${cat.idTipoua"></td>
+						<td class="text-center" th:text="${cat.nameTipoua}"></td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
-		<div id="cpanelbody" class="row">
-
-			<div class="panelitem">
-				<a th:href="@{/home}"> <i class="fa fa-home"
-					style="color: #000000;"></i>
-				</a>
-				<p>Inicio</p>
-			</div>
-
-			<div class="panelitem">
-				<a th:href="@{/tipoderecomendaciones/list}"> <i class="fa fa-star"
-					style="color: #D6D010;"></i>
-				</a>
-				<p>Tipo de Recomendacion</p>
-			</div>
-
-			<div class="panelitem">
-				<a th:href="@{/distritos/list}"> <i class="fa fa-globe"
-					style="color: #1A34C5;"></i>
-				</a>
-				<p>Distritos</p>
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/store/list}"> <i class="fa fa-shopping-bag"
-					style="color: #41C51A;"></i>
-				</a>
-				<p>Tiendas</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/marca/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Marcas</p>
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/tipousuarios/list}"> <i class="fa fa-star"
-					style="color: #D6D010;"></i>
-				</a>
-				<p>Tipo de Usuario</p>
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/tipouas/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Tipo UA</p>
-			</div>
+		<div th:if="${mensaje}" class="alert alert-danger">
+			<p th:text="${mensaje}"></p>
 		</div>
+
 	</div>
+
+
+	<script src="/js/popper.min.js"></script>
+	<script src="/js/jquery-3.3.1.slim.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/dive.js"></script>
 </body>
+
 </html>
