--- a/src/main/resources/templates/Tipoua/tipoua.html
+++ b/src/main/resources/templates/Tipoua/tipoua.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,64 +13,56 @@
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/dive.css">
 </head>
+
 <body>
 
-	<div th:fragment="sidebar" id="panel" class="activepanel ">
-		<div id="cpanel1head" style="margin: 0px; height: 10vh;" class="row">
-			<h2 id="titulopanel" class="col-lg-10">Menú</h2>
-			<i id="iconpanel" class="fa fa-bars col-lg-2"></i>
-		</div>
-		<div id="cpanelbody" class="row">
+	<div th:replace="fragments/sidebar :: sidebar" id="panel"
+		class="activepanel"></div>
 
-			<div class="panelitem">
-				<a th:href="@{/home}"> <i class="fa fa-home"
-					style="color: #000000;"></i>
-				</a>
-				<p>Inicio</p>
+	<div class="bg row">
+		<div th:replace="fragments/nav :: nav" class="row topbar col-lg-12"></div>
+
+		<div class="content container row col-12">
+			<div class="col-1">
+				<h3></h3>
+			</div>
+			<div class="col-3">
+				<h3>Registrar Tipo UA</h3>
+			</div>
+			<div class="col-8 frm-registro">
+				<form th:action="@{/tipouas/save}" method="post"
+					th:object="${tipoua}">
+					<div class="form-group">
+						<label>ID:</label> <input type="text" class="form-control"
+							readonly th:field="*{idTipoua}"></input>
+
+						<div class="form-group">
+							<label for="nombre">NOMBRE:</label> <input type="text" required
+								th:field="*{nameTipoua}" class="form-control" id="nombre"></input>
+							<div class="alert alert-danger"
+								th:if="${#fields.hasErrors('nameTipoua')}"
+								th:errors="*{nameTipoua}"></div>
+
+						</div>
+
+					</div>
+					<button type="submit" class="btn btn-warning">Aceptar</button>
+					<a href="/tipouas/list" class="btn btn-light">Cancelar</a>
+
+				</form>
+				<div th:if="${mensaje}" class="alert alert-danger">
+					<p th:text="${mensaje}"></p>
+				</div>
 			</div>
 
-			<div class="panelitem">
-				<a th:href="@{/tipoderecomendaciones/list}"> <i class="fa fa-star"
-					style="color: #D6D010;"></i>
-				</a>
-				<p>Tipo de Recomendacion</p>
-			</div>
-
-			<div class="panelitem">
-				<a th:href="@{/distritos/list}"> <i class="fa fa-globe"
-					style="color: #1A34C5;"></i>
-				</a>
-				<p>Distritos</p>
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/store/list}"> <i class="fa fa-shopping-bag"
-					style="color: #41C51A;"></i>
-				</a>
-				<p>Tiendas</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/marca/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Marcas</p>
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/tipousuarios/list}"> <i class="fa fa-star"
-					style="color: #D6D010;"></i>
-				</a>
-				<p>Tipo de Usuario</p>
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/tipouas/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Tipo UA</p>
-			</div>
 		</div>
 	</div>
+
+
+	<script src="/js/popper.min.js"></script>
+	<script src="/js/jquery-3.3.1.slim.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/dive.js"></script>
 </body>
+
 </html>
