HARDWARE + mas decoracion

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -48,6 +48,19 @@
 				</a>
 				<p>Tiendasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
 			</div>
+			<div class="panelitem">
+				<a th:href="@{/hardware/list}"> <i class="fa fa-microchip"
+					style="color: #CD2B2B;"></i>
+				</a>
+				<p>Hardwares</p>
+			</div>
+			
+			<div class="panelitem">
+				<a th:href="@{/marca/list}"> <i class="fa fa-registered"
+					style="color: #2BC9CD;"></i>
+				</a>
+				<p>Marcasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
+			</div>
 		</div>
 	</div>
 </body>
