--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -28,31 +28,18 @@
 				<p>Inicio</p>
 			</div>
 
-			
-
 			<div class="panelitem">
 				<a th:href="@{/tipoderecomendaciones/list}"> <i class="fa fa-star"
 					style="color: #D6D010;"></i>
+				</a>
+				<p>Tipo de Recomendacion</p>
+			</div>
+			
+			<div class="panelitem">
 				<a th:href="@{/distritos/list}"> <i class="fa fa-globe"
 					style="color: #1A34C5;"></i>
 				</a>
 				<p>Distritos</p>
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/distritos/list}"> <i class="fa fa-globe"
-					style="color: #1A34C5;"></i>
-				<a th:href="@{/store/list}"> <i class="fa fa-shopping-bag"
-					style="color: #41C51A;"></i>
-				</a>
-				<p>Tiendas</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
-			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/marca/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Marcas</p>
 			</div>
 			
 			<div class="panelitem">
@@ -73,21 +60,7 @@
 					style="color: #2BC9CD;"></i>
 				</a>
 				<p>Marcasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
-
-				<a th:href="@{/tipousuarios/list}"> <i class="fa fa-star"
-					style="color: #D6D010;"></i>
-				</a>
-				<p>Tipo de Usuario</p>
 			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/tipouas/list}"> <i class="fa fa-th-large"
-					style="color: #5450D6;"></i>
-				</a>
-				<p>Tipo UA</p>
-			</div>
-			
-		
 		</div>
 	</div>
 </body>
