--- a/src/main/resources/templates/tipoRecomendacion/tipoRecomendacion.html
+++ b/src/main/resources/templates/tipoRecomendacion/tipoRecomendacion.html
@@ -34,7 +34,7 @@
 					th:object="${tipoRecomendacion}">
 					<div class="form-group">
 						<label>ID:</label> <input type="text" class="form-control"
-							readonly th:field="idTipoRecomendacion"></input>
+							readonly th:field="*{idTipoRecomendacion}"></input>
 
 						<div class="form-group">
 							<label for="tipo">TIPO:</label> <input type="text" required
