--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -46,8 +46,9 @@
 				<a th:href="@{/store/list}"> <i class="fa fa-shopping-bag"
 					style="color: #41C51A;"></i>
 				</a>
-				<p>Tiendasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
+				<p>Tiendasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
 			</div>
+			
 			<div class="panelitem">
 				<a th:href="@{/hardware/list}"> <i class="fa fa-microchip"
 					style="color: #CD2B2B;"></i>
