--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -27,7 +27,13 @@
 				</a>
 				<p>Inicio</p>
 			</div>
-
+			<div class="panelitem">
+				<a th:href="@{/tipousuarios/list}"> <i class="fa fa-user-circle-o"
+					style="color: #CD2B2B;"></i>
+				</a>
+				<p>Usuarioㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
+			</div>
+			
 			<div class="panelitem">
 				<a th:href="@{/tipoderecomendaciones/list}"> <i
 					class="fa fa-star" style="color: #D6D010;"></i>
@@ -62,6 +68,41 @@
 				</a>
 				<p>Marcasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 			</div>
+			
+			<div class="panelitem">
+				<a th:href="@{/tipousuarios/list}"> <i class="fa fa-address-book"
+					style="color: #CDB02B;"></i>
+				</a>
+				<p>Tipo Usuario</p>
+			</div>
+			<div class="panelitem">
+				<a th:href="@{/tipouas/list}"> <i class="fa fa-hdd-o"
+					style="color: #CD2B90;"></i>
+				</a>
+				<p>Tipo Unidad Almacenamiento</p>
+			</div>
+			
+			<div class="panelitem">
+				<a th:href="@{/tipomodulares/list}"> <i class="fa fa-wrench"
+					style="color: #2BCD88;"></i>
+				</a>
+				<p>Tipo Modular</p>
+			</div>
+			
+			<div class="panelitem">
+				<a th:href="@{/tipomodulares/list}"> <i class="fa fa-sun-o"
+					style="color: #5F2BCD;"></i>
+				</a>
+				<p>Tipo Panel</p>
+			</div>
+			<div class="panelitem">
+				<a th:href="@{/tipomodulares/list}"> <i class="fa fa-crosshairs"
+					style="color: #B42BCD;"></i>
+				</a>
+				<p>Tamaño Motherboard</p>
+			</div>
+
+
 		</div>
 	</div>
 </body>
