sidebar tipopanel y tamanomb

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -52,12 +52,10 @@
 				<a th:href="@{/store/list}"> <i class="fa fa-shopping-bag"
 					style="color: #41C51A;"></i>
 				</a>
-<<<<<<< HEAD
-				<p>Tiendasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
-=======
+
 				<p>Tiendasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 				<!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
->>>>>>> 2e2fea6c5b83a045f262513349f5a2ca8ad33ddf
+
 			</div>
 			
 			<div class="panelitem">
@@ -95,13 +93,13 @@
 			</div>
 			
 			<div class="panelitem">
-				<a th:href="@{/tipomodulares/list}"> <i class="fa fa-sun-o"
+				<a th:href="@{/tipopanel/list}"> <i class="fa fa-sun-o"
 					style="color: #5F2BCD;"></i>
 				</a>
 				<p>Tipo Panel</p>
 			</div>
 			<div class="panelitem">
-				<a th:href="@{/tipomodulares/list}"> <i class="fa fa-crosshairs"
+				<a th:href="@{/tamanomb/list}"> <i class="fa fa-crosshairs"
 					style="color: #B42BCD;"></i>
 				</a>
 				<p>Tamaño Motherboard</p>
