corrección de todo lo que hizo Daniel :)

--- a/src/main/resources/templates/Tipoua/listTipouas.html
+++ b/src/main/resources/templates/Tipoua/listTipouas.html
@@ -37,7 +37,7 @@
 				</thead>
 				<tbody>
 					<tr th:each="cat : ${listaTipouas}">
-						<td class="text-center" th:text="${cat.idTipoua"></td>
+						<td class="text-center" th:text="${cat.idTipoua}"></td>
 						<td class="text-center" th:text="${cat.nameTipoua}"></td>
 					</tr>
 				</tbody>
