--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -28,18 +28,13 @@
 				<p>Inicio</p>
 			</div>
 			<div class="panelitem">
-				<a th:href="@{/tipousuarios/list}"> <i class="fa fa-user-circle-o"
-					style="color: #CD2B2B;"></i>
+				<a th:href="@{/tipousuarios/list}"> <i
+					class="fa fa-user-circle-o" style="color: #CD2B2B;"></i>
 				</a>
 				<p>Usuarioㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 			</div>
-			
-			<div class="panelitem">
-				<a th:href="@{/tipoderecomendaciones/list}"> <i
-					class="fa fa-star" style="color: #D6D010;"></i>
-				</a>
-				<p>Tipo de Recomendacion</p>
-			</div>
+
+
 
 			<div class="panelitem">
 				<a th:href="@{/distritos/list}"> <i class="fa fa-globe"
@@ -52,9 +47,10 @@
 				<a th:href="@{/store/list}"> <i class="fa fa-shopping-bag"
 					style="color: #41C51A;"></i>
 				</a>
-				<p>Tiendasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p><!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
+				<p>Tiendasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
+				<!-- NO BORRAR los caracteres invisibles SINO SE MUEVE EN EL SIDEBAR -->
 			</div>
-			
+
 			<div class="panelitem">
 				<a th:href="@{/hardware/list}"> <i class="fa fa-microchip"
 					style="color: #CD2B2B;"></i>
@@ -68,10 +64,10 @@
 				</a>
 				<p>Marcasㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
 			</div>
-			
+
 			<div class="panelitem">
-				<a th:href="@{/tipousuarios/list}"> <i class="fa fa-address-book"
-					style="color: #CDB02B;"></i>
+				<a th:href="@{/tipousuarios/list}"> <i
+					class="fa fa-address-book" style="color: #CDB02B;"></i>
 				</a>
 				<p>Tipo Usuario</p>
 			</div>
@@ -81,14 +77,14 @@
 				</a>
 				<p>Tipo Unidad Almacenamiento</p>
 			</div>
-			
+
 			<div class="panelitem">
 				<a th:href="@{/tipomodulares/list}"> <i class="fa fa-wrench"
 					style="color: #2BCD88;"></i>
 				</a>
 				<p>Tipo Modular</p>
 			</div>
-			
+
 			<div class="panelitem">
 				<a th:href="@{/tipopanel/list}"> <i class="fa fa-sun-o"
 					style="color: #5F2BCD;"></i>
@@ -102,7 +98,12 @@
 				<p>Tamaño Motherboard</p>
 			</div>
 
-
+			<div class="panelitem">
+				<a th:href="@{/tipoderecomendaciones/list}"> <i
+					class="fa fa-star" style="color: #D6D010;"></i>
+				</a>
+				<p>Tipo de Recomendacion</p>
+			</div>
 		</div>
 	</div>
 </body>
