--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -28,7 +28,7 @@
 				<p>Inicio</p>
 			</div>
 			<div class="panelitem">
-				<a th:href="@{/tipousuarios/list}"> <i
+				<a th:href="@{/usuario/list}"> <i
 					class="fa fa-user-circle-o" style="color: #CD2B2B;"></i>
 				</a>
 				<p>Usuarioㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
