como de costumbre errores

--- a/src/main/resources/templates/usuario/listUsuario.html
+++ b/src/main/resources/templates/usuario/listUsuario.html
@@ -55,7 +55,7 @@
 						<td class="text-center" th:text="${cat.distrito.nombreDistrito}"></td>
 						<td class="text-center" th:text="${cat.tipoUsuario.nTipousuario}"></td>
 						<td class="text-center" align="center"><a
-							th:href="@{/store/view/} + ${cat.idUsuario}"> <i
+							th:href="@{/usuario/view/} + ${cat.idUsuario}"> <i
 								class="fa fa-eye" style="color: gray;"></i>
 						</a></td>
 					</tr>
