--- a/src/main/resources/templates/distrito/listDistrito.html
+++ b/src/main/resources/templates/distrito/listDistrito.html
@@ -32,7 +32,7 @@
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">Código</th>
-						<th scope="col" class="text-center">Nombre</th>
+						<th scope="col" class="text-center">Distrito</th>
 						<th scope="col" class="text-center">OPERACION</th>
 					</tr>
 				</thead>
