--- a/src/main/resources/templates/marca/listMarca.html
+++ b/src/main/resources/templates/marca/listMarca.html
@@ -32,8 +32,10 @@
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">Código</th>
-						<th scope="col" class="text-center">Nombre</th>
+						<th scope="col" class="text-center">Marca</th>
 						<th scope="col" class="text-center">URL</th>
+						<th scope="col" class="text-center">OPERACION</th>
+						
 					</tr>
 				</thead>
 				<tbody>
@@ -41,6 +43,12 @@
 						<td class="text-center" th:text="${cat.idMarca}"></td>
 						<td class="text-center" th:text="${cat.nMarca}"></td>
 						<td class="text-center" th:text="${cat.urlMarca}"></td>
+						
+						<td class="text-center">
+							<a class="btn btn-default btn-sm" th:href="@{'/marca/update/' + ${cat.idMarca}}"> <i class="fa fa-cog"></i> Update </a> 
+							<a class="btn btn-danger" th:href="@{/marca/delete?id=}+${cat.idMarca}"> <i class="fa fa-trash-o fa-lg"></i> Delete </a>
+						</td>
+					
 					</tr>
 				</tbody>
 			</table>
