--- a/src/main/resources/templates/tamanoMB/listTamanoMB.html
+++ b/src/main/resources/templates/tamanoMB/listTamanoMB.html
@@ -34,6 +34,7 @@
 						<th scope="col" class="text-center">Código</th>
 						<th scope="col" class="text-center">Nombre</th>
 						<th scope="col" class="text-center">URL</th>
+						<th scope="col" class="text-center">OPERACIONES</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -41,6 +42,12 @@
 						<td class="text-center" th:text="${cat.idTamanoMB}"></td>
 						<td class="text-center" th:text="${cat.nTamanoMB}"></td>
 						<td class="text-center" th:text="${cat.urlTamanoMB}"></td>
+						<td class="text-center">
+						
+						<a class="btn btn-default btn-sm" th:href="@{'/tamanomb/update/' + ${cat.idTamanoMB}}">  <i class="fa fa-cog"></i> Update</a>
+						<a class="btn btn-danger" th:href="@{/tamanomb/delete?id=}+${cat.idTamanoMB}">  <i class="fa fa-trash-o fa-lg"></i> Delete</a>
+						
+						</td>
 					</tr>
 				</tbody>
 			</table>
