--- a/src/main/resources/templates/hardware/listHardware.html
+++ b/src/main/resources/templates/hardware/listHardware.html
@@ -32,7 +32,7 @@
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">ID</th>
-						<th scope="col" class="text-center">Nombre</th>
+						<th scope="col" class="text-center">Hardware</th>
 						<th scope="col" class="text-center">Modelo</th>
 						<th scope="col" class="text-center">Precio</th>
 						<th scope="col" class="text-center">Marca</th>
