--- a/src/main/resources/templates/tienda/listTienda.html
+++ b/src/main/resources/templates/tienda/listTienda.html
@@ -32,10 +32,10 @@
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">ID</th>
-						<th scope="col" class="text-center">Nombre</th>
-						<th scope="col" class="text-center">Direccion</th>
+						<th scope="col" class="text-center">Tienda</th>
+						<th scope="col" class="text-center">Dirección</th>
 						<th scope="col" class="text-center">Distrito</th>
-						<th scope="col" class="text-center">Telefono</th>
+						<th scope="col" class="text-center">Teléfono</th>
 						<th scope="col" class="text-center">Web</th>
 						<th scope="col" class="text-center">Fecha Registro</th>
 						<th scope="col" class="text-center">OPERACIÓN</th>
