--- a/src/main/resources/templates/tipoModular/tipoModular.html
+++ b/src/main/resources/templates/tipoModular/tipoModular.html
@@ -45,7 +45,7 @@
 						</div>
 
 					</div>
-					<button type="submit" class="btn btn-warning">Aceptar</button>
+					<button type="submit" class="btn btn-warning">Grabar</button>
 					<a href="/tipomodulares/list" class="btn btn-light">Cancelar</a>
 
 				</form>
