--- a/src/main/resources/templates/tipoPanel/listTipoPanel.html
+++ b/src/main/resources/templates/tipoPanel/listTipoPanel.html
@@ -25,14 +25,14 @@
 		<div class="content container">
 
 			<div class="d-flex">
-				<h3 class="title-content">Lista de Tipos de Panel</h3>
+				<h3 class="title-content">Lista de Tipos Panel</h3>
 				<a th:href="@{/tipopanel/new}" class="btn btn-info">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">Código</th>
-						<th scope="col" class="text-center">Nombre</th>
+						<th scope="col" class="text-center">Tipo Panel</th>
 						<th scope="col" class="text-center">URL</th>
 						<th scope="col" class="text-center">OPERACIONES</th>
 					</tr>
