--- a/src/main/resources/templates/Tipoua/listTipouas.html
+++ b/src/main/resources/templates/Tipoua/listTipouas.html
@@ -32,8 +32,8 @@
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">ID</th>
-						<th scope="col" class="text-center">Tipo</th>
-						<th scope="col" class="text-center">OPERACION</th>
+						<th scope="col" class="text-center">Tipo de Unidad de Almacenamiento</th>
+						<th scope="col" class="text-center">OPERACIÓN</th>
 
 					</tr>
 				</thead>
