--- a/src/main/resources/templates/distrito/listDistrito.html
+++ b/src/main/resources/templates/distrito/listDistrito.html
@@ -32,8 +32,8 @@
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">Código</th>
-						<th scope="col" class="text-center">Distrito</th>
-						<th scope="col" class="text-center">OPERACION</th>
+						<th scope="col" class="text-center">Distritos</th>
+						<th scope="col" class="text-center">OPERACIÓN</th>
 					</tr>
 				</thead>
 				<tbody>
