--- a/src/main/resources/templates/tamanoMB/listTamanoMB.html
+++ b/src/main/resources/templates/tamanoMB/listTamanoMB.html
@@ -34,7 +34,7 @@
 						<th scope="col" class="text-center">Código</th>
 						<th scope="col" class="text-center">Nombre</th>
 						<th scope="col" class="text-center">URL</th>
-						<th scope="col" class="text-center">OPERACIONES</th>
+						<th scope="col" class="text-center">OPERACIÓN</th>
 					</tr>
 				</thead>
 				<tbody>
