--- a/src/main/resources/templates/tienda/tienda.html
+++ b/src/main/resources/templates/tienda/tienda.html
@@ -40,7 +40,7 @@
 						</div>
 
 						<div class="form-group">
-							<label for="nombre">NOMBRE:</label> <input type="text" required
+							<label for="nombre">Tienda:</label> <input type="text" required
 								th:field="*{nombreTienda}" class="form-control" id="nombre"></input>
 						</div>
 						<div class="alert alert-danger"
@@ -49,7 +49,7 @@
 
 
 						<div class="form-group">
-							<label for="direccion">DIRECCION:</label> <input type="text"
+							<label for="direccion">Dirección:</label> <input type="text"
 								required th:field="*{direccionTienda}" class="form-control"
 								id="direccion"></input>
 						</div>
@@ -58,7 +58,7 @@
 							th:errors="*{direccionTienda}"></div>
 
 						<div class="form-group">
-							<label for="telefono">TELEFONO:</label> <input type="text"
+							<label for="telefono">Teléfono:</label> <input type="text"
 								required th:field="*{telefonoTienda}" class="form-control"
 								id="telefono"></input>
 						</div>
@@ -67,7 +67,7 @@
 							th:errors="*{telefonoTienda}"></div>
 
 						<div class="form-group">
-							<label for="web">WEB:</label> <input type="text" required
+							<label for="web">Web:</label> <input type="text" required
 								th:field="*{webTienda}" class="form-control" id="web"></input>
 						</div>
 						<div class="alert alert-danger"
@@ -84,7 +84,7 @@
 
 					<div class="col-6">
 						<div class="form-group">
-							<label for="distrito">DISTRITO:</label> <select
+							<label for="distrito">Distrito:</label> <select
 								class="form-control" th:field="*{distrito.idDistrito}">
 								<option th:each="c: ${listaDistritos}"
 									th:value="${c.idDistrito}" th:text="${c.nombreDistrito}"
@@ -95,7 +95,7 @@
 						
 
 						<div class="form-group">
-							<label for="fechaTienda">FECHA REGISTRO:</label> <input
+							<label for="fechaTienda">Fecha Registro:</label> <input
 								type="date"  required th:field="*{fechaRegistro}"
 								id="start" name="trip-start" 
 								value="*{fechaRegistro}" min="2018-01-01" max="2058-12-31">
@@ -105,7 +105,7 @@
 							th:errors="*{fechaRegistro}"></div>
 
 						<div class="form-group">
-							<label for="file" class="">FOTO:</label>
+							<label for="file" class="">Foto:</label>
 							<div class="col-sm-6">
 								<input type="file" name="file" class="form-control"
 									th:text="${tienda.fotoTienda}" />
@@ -116,7 +116,7 @@
 					</div>
 
 					<button style="margin: 0px 30px;" type="submit"
-						class="btnadd btn btn-primary">Aceptar</button>
+						class="btnadd btn btn-primary">Grabar</button>
 					<a href="/store/list" class="btn btn-danger">Cancelar</a>
 				</form>
 
