--- a/src/main/resources/templates/tipoModular/listTipoModular.html
+++ b/src/main/resources/templates/tipoModular/listTipoModular.html
@@ -32,7 +32,7 @@
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">Código</th>
-						<th scope="col" class="text-center">Tipo</th>
+						<th scope="col" class="text-center">Tipo Modular</th>
 					</tr>
 				</thead>
 				<tbody>
