--- a/src/main/resources/templates/usuario/listUsuario.html
+++ b/src/main/resources/templates/usuario/listUsuario.html
@@ -25,18 +25,18 @@
 		<div class="content container">
 
 			<div class="d-flex">
-				<h3 class="title-content">Lista de Usuario</h3>
+				<h3 class="title-content">Lista de Usuarios</h3>
 				<a th:href="@{/usuario/new}" class="btn btn-info">Nuevo</a>
 			</div>
 			<table class="table">
 				<thead class="thead-light">
 					<tr>
 						<th scope="col" class="text-center">Código</th>
-						<th scope="col" class="text-center">Nombre</th>
-						<th scope="col" class="text-center">Contrasena</th>
-						<th scope="col" class="text-center">Telefono</th>
+						<th scope="col" class="text-center">Usuario</th>
+						<th scope="col" class="text-center">Contraseña</th>
+						<th scope="col" class="text-center">Teléfono</th>
 						<th scope="col" class="text-center">Correo</th>
-						<th scope="col" class="text-center">Fecha</th>
+						<th scope="col" class="text-center">Fecha de Registro</th>
 						<th scope="col" class="text-center">Distrito</th>
 						<th scope="col" class="text-center">Tipo</th>
 						<th scope="col" class="text-center">Detalle</th>
