--- a/src/main/resources/templates/usuario/usuario.html
+++ b/src/main/resources/templates/usuario/usuario.html
@@ -125,7 +125,7 @@
 
 					<button style="margin: 0px 30px;" type="submit"
 						class="btnadd btn btn-primary">Aceptar</button>
-					<a href="/store/list" class="btn btn-danger">Cancelar</a>
+					<a href="/usuario/list" class="btn btn-danger">Cancelar</a>
 				</form>
 
 				<div th:if="${mensaje}" class="alert alert-danger">
