--- a/src/main/resources/templates/usuario/listUsuario.html
+++ b/src/main/resources/templates/usuario/listUsuario.html
@@ -23,11 +23,18 @@
 		<div th:replace="fragments/nav :: nav" class="row topbar col-lg-12"></div>
 
 		<div class="content container">
+			
+			<form th:action="@{/usuario/search}" method="post"
+					th:object="${usuario}">
+					<label for="nombreUsuario">Buscar:</label> <input type="text"
+						required="required" class="form-control"
+						th:field="*{nombreUsuario}" id="nombreUsuario"></input>
+					<button type="submit" class="btn btn-danger">Buscar</button>
+					<a href="/usuario/list" class="btn btn-light">Limpiar</a>
+				</form>
 
-			<div class="d-flex">
-				<h3 class="title-content">Lista de Usuarios</h3>
-				<a th:href="@{/usuario/new}" class="btn btn-info">Nuevo</a>
-			</div>
+				<a th:href="@{/usuario/new}" class="btnnew btn btn-danger">Nuevo</a>
+			
 			<table class="table">
 				<thead class="thead-light">
 					<tr>
