--- a/src/main/resources/templates/usuario/listUsuario.html
+++ b/src/main/resources/templates/usuario/listUsuario.html
@@ -23,8 +23,9 @@
 		<div th:replace="fragments/nav :: nav" class="row topbar col-lg-12"></div>
 
 		<div class="content container">
-			
-			<form th:action="@{/usuario/search}" method="post"
+			<div class="d-flex">
+				<h3 class="title-content">Lista de Usuarios</h3>
+				<form th:action="@{/usuario/search}" method="post"
 					th:object="${usuario}">
 					<label for="nombreUsuario">Buscar:</label> <input type="text"
 						required="required" class="form-control"
@@ -34,7 +35,8 @@
 				</form>
 
 				<a th:href="@{/usuario/new}" class="btnnew btn btn-danger">Nuevo</a>
-			
+			</div>
+
 			<table class="table">
 				<thead class="thead-light">
 					<tr>
