--- a/src/main/resources/templates/tienda/listTienda.html
+++ b/src/main/resources/templates/tienda/listTienda.html
@@ -35,6 +35,14 @@
 					<button type="submit" class="btn btn-danger">Buscar</button>
 					<a href="/store/list" class="btn btn-light">Limpiar</a>
 				</form>
+				<form th:action="@{/store/search2}" method="post"
+					th:object="${tienda}">
+					<label for="nombreTienda2">Buscar:</label> <input type="text"
+						required="required" class="form-control"
+						th:field="*{distrito.nombreDistrito}" id="nombreTienda2"></input>
+					<button type="submit" class="btn btn-danger">Buscar</button>
+					<a href="/store/list" class="btn btn-light">Limpiar</a>
+				</form>
 
 				<a th:href="@{/store/new}" class="btnnew btn btn-danger">Nuevo</a>
 			</div>
