--- a/src/main/resources/templates/marca/listMarca.html
+++ b/src/main/resources/templates/marca/listMarca.html
@@ -26,7 +26,7 @@
 
 			<div class="d-flex">
 
-				<h3 class="title-content">Lista de Categorias</h3>
+				<h3 class="title-content">Lista de Marcas</h3>
 				<form th:action="@{/marca/search}" method="post"
 					th:object="${marca}">
 					<label for="nameMarca">Buscar:</label> <input type="text"
