--- a/src/main/resources/templates/tipoModular/listTipoModular.html
+++ b/src/main/resources/templates/tipoModular/listTipoModular.html
@@ -33,12 +33,19 @@
 					<tr>
 						<th scope="col" class="text-center">Código</th>
 						<th scope="col" class="text-center">Tipo Modular</th>
+						<th scope="col" class="text-center">Operacion</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="tip : ${listaTipoModular}">
 						<td class="text-center" th:text="${tip.idTipoModular}"></td>
 						<td class="text-center" th:text="${tip.nTipoModular}"></td>
+						<td class="text-center">
+						
+						<a class="btn btn-default btn-sm" th:href="@{'/tipomodulares/update/' + ${tip.idTipoModular}}">  <i class="fa fa-cog"></i> Update</a>
+						<a class="btn btn-danger" th:href="@{/tipomodulares/delete?id=}+${tip.idTipoModular}">  <i class="fa fa-trash-o fa-lg"></i> Delete</a>
+						
+						 </td>
 					</tr>
 				</tbody>
 			</table>
