--- a/src/main/resources/templates/distrito/listDistrito.html
+++ b/src/main/resources/templates/distrito/listDistrito.html
@@ -26,6 +26,15 @@
 
 			<div class="d-flex">
 				<h3 class="title-content">Lista de Distritos</h3>
+				<form th:action="@{/distritos/search}" method="post"
+					th:object="${distrito}">
+
+					<label for="nombreDistrito">Buscar:</label> <input type="text"
+						required="required" class="form-control"
+						th:field="*{nombreDistrito}" id="nombreDistrito"></input>
+					<button type="submit" class="btn btn-danger">Buscar</button>
+					<a href="/distritos/list" class="btn btn-light">Limpiar</a>
+				</form>
 				<a th:href="@{/distritos/new}" class="btn btn-primary">Nuevo</a>
 			</div>
 			<table class="table">
@@ -40,12 +49,13 @@
 					<tr th:each="cat : ${listaDistritos}">
 						<td class="text-center" th:text="${cat.idDistrito}"></td>
 						<td class="text-center" th:text="${cat.nombreDistrito}"></td>
-						<td class="text-center">
-						
-						<a class="btn btn-default btn-sm" th:href="@{'/distritos/update/' + ${cat.idDistrito}}">  <i class="fa fa-cog"></i> Update</a>
-						<a class="btn btn-danger" th:href="@{/distritos/delete?id=}+${cat.idDistrito}">  <i class="fa fa-trash-o fa-lg"></i> Delete</a>
-						
-						 </td>
+						<td class="text-center"><a class="btn btn-default btn-sm"
+							th:href="@{'/distritos/update/' + ${cat.idDistrito}}"> <i
+								class="fa fa-cog"></i> Update
+						</a> <a class="btn btn-danger"
+							th:href="@{/distritos/delete?id=}+${cat.idDistrito}"> <i
+								class="fa fa-trash-o fa-lg"></i> Delete
+						</a></td>
 					</tr>
 				</tbody>
 			</table>
