--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -75,7 +75,7 @@
 				<a th:href="@{/tipouas/list}"> <i class="fa fa-hdd-o"
 					style="color: #CD2B90;"></i>
 				</a>
-				<p>Tipo Unidad Almacenamiento</p>
+				<p>Tipo U. Almacenamiento</p>
 			</div>
 
 			<div class="panelitem">
