--- a/src/main/resources/templates/usuario/listUsuario.html
+++ b/src/main/resources/templates/usuario/listUsuario.html
@@ -53,7 +53,7 @@
 						<th scope="col" class="text-center">Correo</th>
 						<th scope="col" class="text-center">Fecha de Registro</th>
 						<th scope="col" class="text-center">Distrito</th>
-						<th scope="col" class="text-center">Tipo</th>
+						<th scope="col" class="text-center">Rol</th>
 						<th scope="col" class="text-center">Operaciones</th>
 						<th scope="col" class="text-center">Detalle</th>
 					</tr>
