--- a/src/main/resources/templates/usuario/listUsuario.html
+++ b/src/main/resources/templates/usuario/listUsuario.html
@@ -51,7 +51,7 @@
 						<th scope="col" class="text-center">Usuario</th>
 						<th scope="col" class="text-center">Teléfono</th>
 						<th scope="col" class="text-center">Correo</th>
-						<th scope="col" class="text-center">Fecha de Registro</th>
+						<th scope="col" class="text-center">Registro</th>
 						<th scope="col" class="text-center">Distrito</th>
 						<th scope="col" class="text-center">Rol</th>
 						<th scope="col" class="text-center">Operaciones</th>
