--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -22,7 +22,7 @@
 		<div id="cpanelbody" class="row">
 
 			<div class="panelitem">
-				<a th:href="@{/home}"> <i class="fa fa-home"
+				<a th:href="@{/welcome/bienvenido}"> <i class="fa fa-home"
 					style="color: #000000;"></i>
 				</a>
 				<p>Inicio</p>
