--- a/src/main/resources/templates/tipoModular/listTipoModular.html
+++ b/src/main/resources/templates/tipoModular/listTipoModular.html
@@ -40,12 +40,13 @@
 					<tr th:each="tip : ${listaTipoModular}">
 						<td class="text-center" th:text="${tip.idTipoModular}"></td>
 						<td class="text-center" th:text="${tip.nTipoModular}"></td>
-						<td class="text-center">
-						
-						<a class="btn btn-default btn-sm" th:href="@{'/tipomodulares/update/' + ${tip.idTipoModular}}">  <i class="fa fa-cog"></i> Update</a>
-						<a class="btn btn-danger" th:href="@{/tipomodulares/delete?id=}+${tip.idTipoModular}">  <i class="fa fa-trash-o fa-lg"></i> Delete</a>
-						
-						 </td>
+						<td class="text-center"><a class="btn btn-default btn-sm"
+							th:href="@{'/tipomodulares/update/' + ${tip.idTipoModular}}">
+								<i class="fa fa-cog"></i> Update
+						</a> <a class="btn btn-danger"
+							th:href="@{/tipomodulares/delete?id=}+${tip.idTipoModular}">
+								<i class="fa fa-trash-o fa-lg"></i> Delete
+						</a></td>
 					</tr>
 				</tbody>
 			</table>
@@ -55,6 +56,7 @@
 		</div>
 
 	</div>
+	<div th:replace="fragments/nav :: logout" class="row topbar col-lg-12"></div>
 
 
 	<script src="/js/popper.min.js"></script>
